fix btn being cropped off homepage

--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -192,6 +192,8 @@
     margin: 30px 0 0;
     padding: 12px 25px;
     display: table;
+    position: relative;
+    z-index: 2;
   }
 
   h3 {
